2013-02-15  Andreas Kupries  <andreask@activestate.com>

	* New module 'string'. String/text utilities, 8.5+.
	  First packages:
	  - string::token        - regex based lexing.
	  - string::token::shell - parsing basic shell command line syntax.

2013-02-08  Andreas Kupries <andreask@activestate.com>

	* apps/dtplite: Fixed missing -ibase option in direcotry
	* apps/dtplite.man: processing with -merge. Fixed sorting in
	  generated toc and indices. Plus new feature: -toc for external
	  toc to place in the output. Bumped to 1.0.4. Updated
	  documentation.

2013-02-01  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.15 ========================
	* 

2013-01-28  Andreas Kupries  <andreask@activestate.com>

	* modules/fileutil: New package 'fileutil::decode'.
	* modules/zip: New module 'zip', with packages 'zipfile::encode'
	  and 'zipfile::decode'

2013-01-24  Andreas Kupries  <andreask@activestate.com>

	* New module and packages: clock (rfc2822, iso8601).
	  Tcl 8.5 only.

2013-01-08  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* configure.in: [Bug 3593146]: Extended with CYGPATH usage to
	  allow building under cygwin.
	* configure: Regenerated (autoconf 2.67).

2012-08-07  Andreas Kupries  <andreask@activestate.com>

	* modules/generator: Generators (via the coroutines of
	  Tcl 8.6). Provided by Neil Madden.
	* support/installation/modules.tcl:

2011-12-13  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.14 ========================
	* 

2011-11-07  Andreas Kupries  <andreask@activestate.com>

	* sak.tcl (xcopy): Fixed bug a preventing the detection of files
	  in subdirectories; copied from the installer.
	* sak.tcl (ipackages): Fixed bug (reuse of varname) which placed
	  packages into the wrong module.

2011-05-31  Andreas Kupries  <andreask@activestate.com>

	* New module and package: oo::util. Right now only easy